# yew-playground

./: .gitignore  Cargo.toml  README.md  justfile
client/: Cargo.toml
client/src/: app.rs  lib.rs
client/src/components/: mod.rs  playground.rs  root.rs  sandbox.rs
client/src/services/locale/: fetch.rs  mod.rs
client/static/: index.html
client/static/locale/: en-GB.ftl
docker/: README.md  justfile
docker/base/: Cargo.toml  Dockerfile  entrypoint.sh
docker/cargo-expand/: Dockerfile
docker/compiler/: Dockerfile
frontend/: Cargo.toml  README.md
frontend/src/: boot.rs  lib.rs  utils.rs
frontend/src/components/: action_bar.rs  browser.rs  console.rs  editor.rs  explorer.rs  icon.rs  mod.rs  playground.rs  root.rs
frontend/src/components/ansi/: cursor.rs  graphic_rendition.rs  mod.rs  sequences.rs
frontend/src/routes/: home.rs  mod.rs  sandbox.rs
frontend/src/services/: api.rs  locale.rs  mod.rs
frontend/src/services/locale/: fetch.rs  mod.rs
frontend/static/: index.html
frontend/static/locale/: en-GB.ftl
frontend/style/: _icons.scss  _theme.scss  main.scss
frontend/style/components/: _ansi.scss  _browser.scss  _console.scss  _editor.scss  _explorer.scss
frontend/style/helpers/: _htbar.scss
frontend/style/routes/: _sandbox.scss
protocol/: Cargo.toml  README.md
protocol/src/: error.rs  lib.rs  messages.rs  sandbox.rs  session.rs  types.rs
server/: Cargo.toml  README.md
server/config/docker/: justfile
server/config/docker/clippy/: Dockerfile
server/config/docker/rustfmt/: Dockerfile
server/config/template/: Cargo.toml
server/config/template/static/: index.html
server/src/: error.rs  janitor.rs  main.rs  sandbox.rs  serve.rs
server/src/sandbox/: commands.rs  error.rs  helpers.rs  mod.rs  request.rs  response.rs
template/public/: index.html
template/src/: lib.rs
