[package]
name = "frontend"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
console_log = { version = "0.2", features = ["color"], optional = true }
fluent = "0.12"
fluent-syntax = "0.9"
log = "0.4"
protocol = { path = "../protocol" }
thiserror = "1.0"
unic-langid = "0.9"
wasm-bindgen = "0.2"
yew = "0.17"

[features]
default = ["console_log"]
