[package]
name = "frontend"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_log"]

[dependencies]
anyhow = "1.0"
fluent = "0.12"
fluent-syntax = "0.9"
log = "0.4"
monaco = { git = "https://github.com/siku2/rust-monaco", features = [
    "yew-components"
] }
protocol = { path = "../protocol" }
serde = "1.0"
thiserror = "1.0"
unic-langid = "0.9"
wasm-bindgen = "0.2"
yew = "0.17"
yew-router = "0.14"

[dependencies.console_log]
version = "0.2"
features = ["color"]
optional = true

[dependencies.web-sys]
version = "0.3"
features = ["HtmlIFrameElement", "Location", "Window"]
