[package]
name = "server"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

[dependencies]
log = "0.4"
protocol = { path = "../protocol" }
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3"
thiserror = "1.0"
# Forced to use 0.7 because of rocket_contrib
uuid = { version = "0.7", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "serve", "uuid"]
