[workspace]

[package]
name = "playground"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false

[dependencies]
wasm-bindgen = "0.2.65"
yew = "0.17.2"
yew-router = "0.14.0"
