[workspace]

[package]
name = "playground"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3"
yew = "0.17"
yew-router = "0.14"
